# C-3PO

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  c3po.h  c3po.py  file.py  line.py  obfs.py  project.py  test.c  test.sh  test_obfs.h
c3po/: __init__.py  asm.py  brueforce.sh  file.py  lex.py  line.py  output.py  post.py  project.py  siteclone.sh
src/: c3po.c  c3po.h  test.c  test.h  test_obfs.h
test/: c3po.json  post_unittest  post_unittest.json  post_unittest_encrypted  run_tests.sh
test/assert/: assert.c
test/basic/: basic.c
test/encrypt/: encrypt.c
test/funcencrypt/: funcencrypt.c
test/mangle/: mangle.c
test/shatter/: shatter.c
test/shuffle/: shuffle.c
test/src/: assert.c  basic.c  cxor.c  mangle.c  shatter.c  shuffle.c
test/timer/: timer.c
